--- a/contents/dimension/01-pca.qmd
+++ b/contents/dimension/01-pca.qmd
@@ -3,6 +3,7 @@ title: "Analyse en composantes principales"
 format: 
   html: default
   pdf:
+    number-sections: true
     header-includes:
       - \usepackage{mathtools} 
 ---
