--- a/contents/dimension/03-kernel.qmd
+++ b/contents/dimension/03-kernel.qmd
@@ -3,6 +3,7 @@ title: "Noyau"
 format: 
   html: default
   pdf:
+    number-sections: true
     header-includes:
       - \usepackage{mathtools} 
 ---
