--- a/contents/unsupervised/02-hierarchy.qmd
+++ b/contents/unsupervised/02-hierarchy.qmd
@@ -128,66 +128,51 @@ $$\alpha_A + \alpha_B + \beta = 1, \quad \alpha_A = \alpha_B, \quad \gamma = 0.$
 Ainsi, on a $\alpha_A = \alpha_B = \frac{1 - \beta}{2}$. Il ne reste qu'un seul paramètre à fixer. Généralement, on choisit $\beta = -0.25$. Si l'on soupçonne la présence de données aberrantes, on peut opter pour $\beta = -0.5$ afin d'accroître la robustesse de l'algortihme.
 
 
-## Pratique 
+## Quelle partition choisir ?
 
-L'exécution d'un algorithme nous donne une séquence de $n$ partitions ayant de $n$ à $1$ groupes.
+Un algorithme de classification hierarchique, ascendant ou descendant, produit une séquence de $n$ partitions imbriquées, allant de $n$ groupes (où chaque observation est isolée) à un seul groupe contenant toutes les observations. En pratique, on se pose donc la question suivante : quelle partition faut-il considérer ?
 
-Quelle partition de cette séquence devrions-nous choisir?
+Plusieurs pistes peuvent guider ce choix :
 
-L'une des $n$ partitions est-elle particulièrement interprétable?
-L'une des $n$ partitions a-t-elle a un sens pratique?
-Visions-nous séparer la population en un nombre $K$ de groupes?
+* Une des partitions est-elle particulièrement interprétable d'un point de vue scientifique ou métier ?
 
-S'il n'y a pas de réponse claire à ces questions, des critères peuvent nous guider ...
+* Une des partitions est-elle pertinente sur le plan opérationnel, par exemple pour orienter des décisions ?
 
-Il y a plusieurs indications pour nous aider dans le choix du nombre de classe (surtout si les variables sont continues).
-La librairie **NbClust** en contient une trentaine: https://www.rdocumentation.org/packages/NbClust/versions/3.0.1/topics/NbClust 
+* Cherche-t-on explicitement à segmenter la population en un nombre de groupes $K$, déterminé à l'avance ?
 
+Lorsque ces considérations pratiques ne suffisent pas à trancher, on peut s'appuyer sur des critères statistiques pour évaluer la qualité des partitions et suggérer un nombre "optimal" de groupes. Ces critères sont surtout adaptés lorsque les variables sont continues.
 
-* Les indicateurs basées sur l'inertie
-
-$$I_{tot} = I_{intra-groupe}+ I_{inter-groupe}$$
-Ces indicateurs sont plus pertinents avec des variables continues. Prendre garde au poids des variables et à la
-standardisation.
-
-* Pseudo- $R^2$
-
-$$Pseudo-R^2 =\frac{I_{inter-groupe}}{I_{tot}}$$
-
-* Statistique de Caliliski-Harabasz (CH):
-
-$$CH = \frac{I_{inter-groupe}/(k-1)}{I_{intra-groupe}/(n-k)}$$
+La librairie R [`NbClust`](https://www.rdocumentation.org/packages/NbClust/versions/3.0.1/topics/NbClust) en propose une trentaine et la librairie Python [`sklearn`](https://scikit-learn.org/stable/modules/clustering.html#clustering-performance-evaluation) une dizaine. On présente ensuite les critères les plus fréquemment utilisés.
 
 
-* Indice de Dunn: On maxime l'indice suivant:
+### Critères basés sur l'inertie
 
-$$D= \frac{\text{Distance minimale entre 2 groupes}}{\text{Distance maximale dans un groupe}}$$
+L'inertie mesure la dispersion des observations appartenant à un groupe par rapport à son centroïde.
 
-L’indice de Dunn cherche donc à créer des groupes denses et bien séparés.
+L'inertie totale $I_{tot}$ se décompose en une inertie **intra-groupe** et une inertie **inter-groupe** :
+$$I_{\text{tot}} = I_{\text{intra-groupe}} + I_{\text{inter-groupe}}.$$
 
-* Indice de silhouette
+Plus les groupes sont compacts, plus l'inertie intra-groupe est failble, ce qui signifie que l'inertie inter-groupe est élevé. Une partition de bonne qualité maximise donc l'inertie inter-groupe. Ces critères supposent généralement que les variables sont continues et ont été standardisées pour éviter qu'une variable à grande échelle ne domine les autres. 
+Parmi les critères se basant sur l'inertie, on peut citer : le pseudo-$R^2$ et la statistique de Calinski-Harabasz (CH).
 
-La silhouette de l’observation $i$ mesure la confiance dans le choix du groupe pour l’observation $i$:
-$$S(i) = \frac{b_i-a_i}{max(b_i,a_i)}$$
-où $a_i$ est la distance moyenne entre l’observation $i$ et les autres observations de son groupe et $b_i$ est la distance moyenne entre l’observation $i$ et les observations du groupe le plus proche de $i$. On souhaite maximiser la silhouette moyenne des observations.
+Le pseudo-$R^2$ mesure la proportion d'inertie expliquée par la partition :
 
-* Critère de classification cubique (CCC)
+$$\text{pseudo-}R^2 =\frac{I_{\text{inter-groupe}}}{I_{\text{tot}}}.$$
 
-On fait un graphique avec le CCC en ordonnée et le nombre de groupes en abscisse. Pour le nombre de groupes, on ne considère que les partitions de $K=1$ à $K=n/10$.
-Si  $CCC>2$, on est en présence d'une classification de bonne qualité. Si  $0<CCC<2$, on est en présence d'une classification de qualité moyenne. Si $CCC<0$, on est en présence d'une classification de mauvaise qualité. Pour choisir le nombre de classes à retenir, on peut considérer les nombres de classes associés aux fortes hausses du critère CCC entre deux nombres de classes subséquents.
-On considère les pics, atteignant des valeurs du critère supérieures à 2 ou à 3 comme étant de fortes hausses de ce critère.
+Un pseudo-$R^2$ élevé indique que la parition capture une grande part de la structure des données. La statistique CH est une variation du pseudo-$R^2$ normalisé par le nombre de groupes :
+$$\text{CH} = \frac{I_{\text{inter-groupe}} / (K - 1)}{I_{\text{intra-groupe}} / (n - K)}.$$
+Un score élevé de la statistique CH suggère un bon équilibre entre groupes compactes et groupes séparés.
 
-Il ne faut pas utiliser le critère CCC avec la méthode du plus proche voisin, ou lorsque l'on suspecte que les groupes sont de forme très allongée ou irrégulière.
-Le critères ne fonctionne pas bien quand le nombre d'observations dans certains groupes est inférieur à 10.
+### Critères basés sur la distance
 
-* Statistique pseudo-$F$
+On peut aussi utiliser des critères se basant sur la distance entre les observations pour mesurer la qualité d'une partition. Parmi les critères se basant sur la distance, on peut citer : l'indice de Dunn et l'indice de silhouette.
 
-Statistique presque distribuée selon une loi $F$ lorsque la loi des données pas trop loin de la normale multivariée avec variances égales dans toutes les classes.
-Même si on est loin de la normalité, en pratique cette statistique peut quand-même être informative.
-On cherche des nombres de classes pour lesquels la statistique du pseudo-$F$ se démarque par une grande valeur.
-Sur un graphique de la statistique du pseudo-$F$ en fonction du nombre de classes, ceci se traduit par la recherche de pics.
-Il ne faut pas utiliser la statistique du pseudo-$F$ avec la méthode du plus proche voisin.
+L'indice de Dunn cherche à maximiser la distance minimale entre deux groupes, tout en minimisant la distance maximale entre les observations à l'intérieur d'un groupe :
+$$D= \frac{\text{Distance minimale entre 2 groupes}}{\text{Distance maximale dans un groupe}}.$$
+Ce critère favorise des groupes denses et bien séparés. En ce qui concerne le critère de silhouette, il mesure la qualité d'affection d'une observation $X_i$ à son groupe :
+$$S(X_i) = \frac{b_i - a_i}{max(b_i, a_i)}$$
+où $a_i$ est la distance moyenne entre l’observation $X_i$ et les autres observations de son groupe et $b_i$ est la distance moyenne entre l’observation $X_i$ et les observations du groupe le plus proche de $X_i$. On souhaite maximiser la silhouette moyenne des observations. La silhouette moyenne sur toutes les observations est donc un bon indicateur de la cohérence globale de la partition.
 
-* Statistique du pseudo-$t^2$
 
-Statistique presque distribuée selon une loi $t$ lorsque loi des données pas trop loin de la normale multivariée avec des variances égales dans toutes les classes. En pratique, on regarde le graphique de la statistique du pseudo-$t^2$ en fonction du nombre de classes de droite à gauche, on essaie de trouver des valeurs de la statistique qui sont beaucoup plus élevées que la valeur précédente. Supposons que la forte hausse se produit entre $k$ et $k-1$ classes. On choisit $k$ classes dans le partitionnement de nos observations. Il ne faut pas utiliser la statistique du pseudo-$t^2$ avec la méthode du plus proche voisin.
+En résumé, plusieurs critères peuvent nous guider dans le choix du nombre de groupes, mais aucun n'est parfait. Il est souvent recommendé de croiser connaissance métier, visualisation des partitions et indicateurs statistiques pour prendre une décision éclairée.
+
